# EgocentricVision

./: .gitignore  0-BYTE-MP4-FIX.md  README.md  debug-gstreamer.sh  docker-compose.yml  test-docker-setup.sh  test-gstreamer-logic.sh  test_connection.sh
config/: mediamtx.yml  record.yaml
docs/: 動画解析による作業標準書自動生成_.md
scripts/: install_mediamtx.sh  set_static_ip.sh  setup_mediamtx_service.sh
src/frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts  vitest.config.ts
src/frontend/docs/: 0010_要件定義書.md  0020_基本設計書.md
src/frontend/prompts/: develop.md
src/frontend/src/: App.tsx  main.tsx
src/instructional_video/docs/: 0010_要件定義書.md  0020_基本設計書.md
src/record/: .dockerignore  Cargo.toml  Dockerfile  README.md
src/record/.sqlx/: query-669d1a20cb147c94b45593c16c1583473ccdf768bc8523bad972e8c82c5c3183.json  query-769b28f41cc20306efa38b66a542d9b6cde7cbb8027b783908a7f74318693a30.json  query-9bcd81d4fe1de66b60ef1619cabeb277e5f2064f1382e074115a5ce665fedd74.json  query-a89e76431bd4181f1dacf9ee7b81a6f0dc61c60325807af4800c0aa8faf4bd1a.json  query-aa15527a86b47e19392eb74e8f64870b896b410c5dd244af6767cd5c60f70014.json
src/record/docs/: 0010_要件定義書.md  0020_基本設計書.md
src/record/migrations/: 001_initial.sql
src/record/prompts/: api_test.md  develop_and_test.md  docker_test.md  lint.md
src/record/src/: app.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  mod.rs  models.rs  recording.rs  stream.rs  webrtc.rs
src/record/src/api/: mod.rs
src/record/src/api/handlers/: health.rs  mod.rs  recordings.rs  streams.rs  webrtcs.rs
(+25 files in other folders)
